Added div class="card-frame"

--- a/index.html
+++ b/index.html
@@ -69,10 +69,18 @@
             <div class="container">
             <h2 class="ourteam-title">Наша команда</h2>
             <ul class="list ourteam-cards ourteam-name ourteam-position">
-            <li class="ourteam-card1"><img src="./images/person1.jpg" width="270" alt="фото"><h4>Игорь Демьяненко</h4><p>Product Designer</p></li>
-            <li class="ourteam-card2"><img src="./images/person2.jpg" width="270" alt="фото"><h4>Ольга Репина</h4><p>Frontend Developer</p></li>
-            <li class="ourteam-card3"><img src="./images/person3.jpg" width="270" alt="фото"><h4>Николай Тарасов</h4><p>Marketing</p></li>
-            <li class="ourteam-card4"><img src="./images/person4.jpg" width="270" alt="фото"><h4>Михаил Ермаков</h4><p>UI Designer</p></li>
+            <li class="ourteam-card1"><img src="./images/person1.jpg" alt="фото">
+            <div class="card-frame"><h4>Игорь Демьяненко</h4><p>Product Designer</p>
+            </div></li>
+            <li class="ourteam-card2"><img src="./images/person2.jpg" alt="фото">
+            <div class="card-frame"><h4>Ольга Репина</h4><p>Frontend Developer</p></div>
+            </li>
+            <li class="ourteam-card3"><img src="./images/person3.jpg" alt="фото">
+            <div class="card-frame"><h4>Николай Тарасов</h4><p>Marketing</p></div>
+            </li>
+            <li class="ourteam-card4"><img src="./images/person4.jpg" alt="фото">
+            <div class="card-frame"><h4>Михаил Ермаков</h4><p>UI Designer</p></div>
+            </li>
             </ul>
         </div> <!-- CONTAINER -->
         </section>   
