Fix error (div class="main-logo")

--- a/index.html
+++ b/index.html
@@ -33,11 +33,10 @@
 
    <main>      
         <section class="top-background">
-            <!-- CONTAINER -->
-            <div class="container main-logo">
+            <div class="main-logo">
             <h1 class="main-title">Эффективные решения для вашего бизнеса</h1>
             <button class="button" type="button">Заказать услугу</button>
-        </div> <!-- CONTAINER -->
+        </div>
         </section>
 
         <section class="advanteges-section">
